--- a/KhuyenMai/Properties/Resources.resx
+++ b/KhuyenMai/Properties/Resources.resx
@@ -139,4 +139,10 @@
   <data name="speaker" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\speaker (3).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ngaydata" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ngaykhuyenmai" xml:space="preserve">
+    <value />
+  </data>
 </root>
